# sales-monitor-api

./: README.md  manage.py  pyproject.toml
docs/: Main-Doc.md
products/: models.py  serializers.py  urls.py  views.py
products/scripts/: addSampleProducts.py  sampleData.json
sales_monitor_api/: asgi.py  settings.py  urls.py  wsgi.py
users/: serializers.py  urls.py  views.py
